--- a/styles/style.css
+++ b/styles/style.css
@@ -33,19 +33,32 @@ h2 {
   margin-top: 100px;
   color: var(--secondary-color);
 }
+h4 {
+  text-align: center;
+  margin: 0 20px;
+  color: var(--primary-color);
+}
 .action-link {
   display: block;
   color: white;
   background-color: var(--primary-color);
   box-shadow: var(--box-shadow);
-  padding: 10px;
+  padding: 15px;
   text-decoration: none;
   border-radius: 4px;
   text-align: center;
+  font-size: 20px;
 }
 .action-link.home {
-  width: 100%;
-  float: right;
+  width: 80%;
+}
+.action-link-wrapper {
+  align-self: center;
+  justify-self: center;
+}
+.action-link-row {
+  justify-content: flex-end;
+  margin: 60px;
 }
 .action-link.blog {
   width: 20%;
@@ -58,6 +71,46 @@ h2 {
 .action-link:hover {
   color: var(--third-color);
 }
+.homepage-content {
+  font-size: 20px;
+  text-align: center;
+}
+.blog-content.bottom {
+  padding: 12px;
+}
+.contact-info {
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+}
+.contact-icon {
+  font-size: 30px;
+  margin: 0 20px;
+}
+.fa-facebook {
+  color: rgb(76, 110, 245);
+}
+.source-links {
+  font-family: monospace;
+  font-size: 12px;
+  margin-top: 40px;
+}
+
+.team-cell {
+  margin: 20px;
+}
+
+.team-text {
+  display: block;
+  text-align: center;
+  margin: 5px 20px;
+}
+.event {
+  margin: 5px;
+  border: 1px solid var(--primary-color);
+  border-radius: 4px;
+}
+
 @media (min-width: 900px) {
   .blog-content {
     margin-top: 40px;
@@ -87,57 +140,52 @@ h2 {
   .alt-nav-link {
     background-color: transparent;
   }
-  .action-link-home {
+  .action-link-row {
+    justify-content: center;
+    margin: 20px;
+  }
+  .action-link.home {
     font-size: 12px;
     padding: 5px;
+    width: 40%;
+    margin: 10px, 0px !important;
   }
+
   .homepage-content {
     font-size: 12px !important;
     text-align: center;
   }
   .blog-content {
     width: 100%;
+    font-size: smaller;
+    justify-content: center;
+    margin: 0 !important;
   }
   .action-link {
     padding: 5px;
-    font-size: 12px;
+    font-size: 10px;
+    margin: 0px, 20px;
+    text-align: center;
   }
 }
-.contact-info {
-  display: block;
-  text-align: center;
-  margin-top: 10px;
-}
-.contact-icon {
-  font-size: 30px;
-  margin: 0 20px;
-}
-.fa-facebook {
-  color: rgb(76, 110, 245);
-}
-.source-links {
-  font-family: monospace;
-  font-size: 12px;
-  margin-top: 40px;
-}
-.blog-content {
-  padding: 0px;
-}
-.team-cell {
-  margin: 20px;
-}
-h4 {
-  text-align: center;
-  margin: 0 20px;
-  color: var(--primary-color);
-}
-.team-text {
-  display: block;
-  text-align: center;
-  margin: 5px 20px;
-}
-.event {
-  margin: 5px;
-  border: 1px solid var(--primary-color);
-  border-radius: 4px;
+@media (max-width: 300px) {
+  h1 {
+    font-size: 20px !important;
+  }
+  h2 {
+    margin-top: 60px;
+    font-size: 16px !important;
+  }
+  h3 {
+    font-size: 12px !important;
+  }
+  h4 {
+    font-size: 12px;
+  }
+  .nav-link {
+    font-size: 12px;
+  }
+  .action-link {
+    font-size: 8px;
+  }
 }
