Fix labels and small screen font size

--- a/styles/style.css
+++ b/styles/style.css
@@ -106,12 +106,18 @@ h4 {
   margin: 5px 20px;
   line-height: 1;
 }
+.team-content {
+  padding: 0px 60px;
+}
 .event {
   margin: 5px;
   border: 1px solid var(--primary-color);
   border-radius: 4px;
 }
 
+.contact-link {
+  font-size: 20px;
+}
 @media (min-width: 900px) {
   .blog-content {
     margin-top: 40px;
@@ -173,9 +179,9 @@ h4 {
   .team-text {
     margin: 5px 5px;
   }
-}
-.team-content {
-  padding: 0px 60px;
+  .contact-link {
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 300px) {
